Fixed text alignment in status section

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
     flex-flow:row wrap;
     justify-content: space-evenly;
     align-items: center;
+    text-align: center;
 }
 
 .profile-status {
